fix: font size of the hint was too big

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,6 @@ h1 {
     font-size: 20px;
 }
 
-p.hint {
+#hint {
     font-size: 14px;
 }
